@@ -1,6 +1,7 @@
 post-v1.10.0
 ---------------------
     - Stable bond mode has been removed.
+    - The autopath action has been removed.
 
 
 v1.10.0 - xx xxx xxxx
